--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="image/image-omelette.jpeg" alt="" srcset="" />
+      <img src="image-omelette.jpeg" alt="" srcset="" />
       <div class="simple">
         <h3>Simple Omelette Recipe</h3>
         <p>
